--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 maintainers = [
   {name = "Jan Eggers", email = "jan.eggers@hr.de"},
 ]
-version = "0.1.2"
+version = "0.1.3" # Neue Versionsnummern für pip-Update
 description = "Bluesky-Konten auf KI-Inhalte checken"
 requires-python = ">=3.8"
 dependencies = [
